.argocd/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: marplify
  namespace: marplify
spec:
  selector:
    app: marplify
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: NodePort
