.argocd/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: marplify
  namespace: marplify
spec:
  ingressClassName: nginx
  rules:
  - host: marplify.yumekiti.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: marplify
            port:
              number: 80
